--- a/style.css
+++ b/style.css
@@ -173,11 +173,11 @@ h1 span {
 /* NOTE CARD SPACING */
 
 .note-card {
-  padding: 14px 22px;
+  padding: 14px 16px;   /* vorher 22px */
 }
 
 .note-card h2 {
-  margin: 0 0 4px 12px;   /* vorher 8px */
+  margin: 0 0 0px 10px;   /* vorher 4px */
 }
 
 /* =========================
@@ -217,6 +217,7 @@ h1 span {
   }
 
 }
+
 
 
 
